# autoseed-notebook

./: MANIFEST.in  README.md  pyproject.toml  setup.py
src/autoseed/: __init__.py  runner.py
src/autoseed/notebooks/: autoseed_v2.2.ipynb
